Makefile: Build lokios.0 directly instead of via a .raw file.
This also renames the output to lokios.0 instead of lokios to indicate
that it is the stage 0 bootloader.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,12 @@
 OBJS = lokios.o console.o entry.o
 ASFLAGS = -march=i386 --32
 
-lokios: lokios.raw
-	cp lokios.raw lokios
-
-lokios.raw: lokios.elf
-	objcopy -O binary -S lokios.elf lokios.raw
+lokios.0: lokios.elf
+	objcopy -O binary -S lokios.elf lokios.0
 
 lokios.elf: $(OBJS) lokios.ld
 	ld -melf_i386 -T lokios.ld -o lokios.elf $(OBJS)
 
 .PHONY: clean
 clean:
-	rm -f lokios.elf lokios.raw lokios *.o
+	rm -f lokios.elf lokios.0 *.o
