lokios.0: Use immediate instead of deferred assignment in Makefile.

--- a/lokios.0/Makefile
+++ b/lokios.0/Makefile
@@ -1,5 +1,5 @@
-OBJS = lokios.o console.o entry.o
-ASFLAGS = -march=i386 --32
+OBJS := lokios.o console.o entry.o
+ASFLAGS := -march=i386 --32
 NOW := $(shell date +"%c")
 
 lokios.0: lokios.elf
