.gitignore: Simplify since all our build products are in well-known locations.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@
 *.d
 *.a
 *.map
-bin/lokios.0
-bin/lokios.1
-tests/*
-lokios.0/lokios.0
-lokios.1/lokios.1
+build
+bin
+tests
 timestamp.s
-lokios.mbr
