docker: Install qemu package.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update -y                                   \
     manpages                                            \
     manpages-dev                                        \
     python                                              \
+    qemu                                                \
     software-properties-common                          \
     sudo                                                \
     tig                                                 \
