Dockerfile: Add telnet package.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get update -y                                   \
     software-properties-common                          \
     sudo                                                \
     systemtap-sdt-dev                                   \
+    telnet                                              \
     tig                                                 \
     tmux                                                \
     vim                                                 \
