Dockerfile: Extract the gcc-7 source and provide a generic symlink.
We need these for building libsupc++ and periodically the upstream
version of gcc-7 will change versions.  By providing a 'latest' symlink,
we can put that into our makefiles instead of updating them every time
gcc-7's version changes.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,6 +35,11 @@ RUN apt-get update -y                                   \
  && update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7 \
  && update-alternatives --config gcc
 
+# Configure symlink to latest gcc source.
+RUN cd /usr/src/gcc-7       \
+ && tar xf gcc-7.?.?.tar.xz \
+ && ln -s gcc-7.?.? latest
+
 # Copy in the filesystem.
 COPY fs/ /
 
