Dockerfile: Pin the ubuntu version at 16.04.
Ubuntu 18 blows up when we try to build the kernel.  And there are all
sorts of other strange problems like man pages not working.  We don't
need anything fancy from the OS; pin our version at 16.04.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,11 @@
 # Note that the special privileges are only required for use with gdb if you
 # want to debug unittests.  If you are concerned about the privilege level and
 # only want to do builds then you can run without the extra privileges.
-FROM ubuntu:latest
+
+# We require Ubuntu 16.04.  Later versions of Ubuntu seem to have all sorts of
+# problems building with PIC/PIE and mcmode=kernel even though we are providing
+# all our own tools.
+FROM ubuntu:16.04
 
 # Install the base OS packages.
 RUN apt-get update -y                                   \
