Docker: Add gcc-7 32-bit libraries to the install.
We'll need these for the 32-bit protected-mode bootloader.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,6 +36,7 @@ RUN apt-get update -y                                   \
     g++-7                                               \
     gcc-7                                               \
     gcc-7-source                                        \
+    lib32gcc-7-dev                                      \
  && update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7 \
  && update-alternatives --config gcc
 
