docker: Update Dockerfile with instructions on how to publish the cmd and wapi ports.
This allows (at least in docker-for-mac) the host OS to access the loki
ports.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Build with: docker build --build-arg username=YOUR_NAME --build-arg name='FIRST_NAME LAST_NAME' --build-arg email=YOUR@EMAIL -t lokios-build .
-# Run with  : docker run --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --tmpfs /tmp:rw,size=2G,mode=1777 -ti lokios-build
+# Run with  : docker run --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --tmpfs /tmp:rw,size=2G,mode=1777 -p 127.0.0.1:12345-12346:12345-12346 -ti lokios-build
 #
 # Note that the special privileges are only required for use with gdb if you
 # want to debug unittests.  If you are concerned about the privilege level and
